# uptime

./: .gitignore  CMakeLists.txt  license  readme.md  readme.txt  uptime.cpp  uptime.hpp
etc/: uptime.cpp
